# m1

./: .gitignore  README.md  amplify_outputs.json  package-lock.json  package.json  start-sandbox.ps1  tsconfig.json
.github/: copilot-instructions.md
.serena/: project.yml
.serena/memories/: commit_message_language_and_style.md  progress_2025-12-26_resume_validation_deploy_doc.md  progress_2025-12-26_validation_and_store_guard.md
amplify/: backend.ts
amplify/auth/: resource.ts
amplify/data/: onCandidateUpdated.js  resource.ts
amplify/functions/upsert-vote/: handler.ts  resource.ts
backend/: pyproject.toml
backend/scripts/: create_dynamodb_table.py
backend/src/m1/: __init__.py  domain.py  main.py  ranking.py  store.py
backend/tests/: test_ranking.py  test_requests_validation.py  test_store_join_event_duplicate_name.py
config/: .env_sample
docs/developer_guide/: deploy_operation.md  design.md  spec.md  validation_and_deploy_next_steps.md
docs/researches/: research_report_by_gemini.md
web/: app.js  index.html  package-lock.json  package.json  style.css
web/src/: app.js
