[project]
name = "m1"
version = "0.1.0"
description = "Scoring + ranking web app (MVP)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "mangum>=0.17",
  "boto3>=1.34",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
